--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.32.2
-tensorflow==2.15.0
-numpy==1.26.4
-pandas==2.2.1
-scikit-learn==1.4.1
-matplotlib==3.8.3
-seaborn==0.13.2
-pickle-mixin==1.0.2
+streamlit
+numpy
+pandas
+scikit-learn
+matplotlib
+seaborn
+nltk
